# AI-DAW

./: CMakeLists.txt  README.md
Source/: AudioEngine.cpp  AudioEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  TimeFormatter.h  WaveformComponent.cpp  WaveformComponent.h
Source/Audio/: AudioClip.h  AudioRecorder.cpp  AudioRecorder.h  AudioTrack.cpp  AudioTrack.h  Metronome.cpp  Metronome.h
Source/Core/: ProjectModel.cpp  ProjectModel.h  TempoMap.cpp  TempoMap.h  TrackTypes.h
Source/Midi/: MidiClip.h  MidiInputManager.cpp  MidiInputManager.h  MidiTrack.cpp  MidiTrack.h  SimpleSynth.cpp  SimpleSynth.h
Source/UI/: TimelineComponent.cpp  TimelineComponent.h
Source/Utils/: TimeFormatter.cpp
